--- a/java/1.rest-api-with-spring/build.gradle
+++ b/java/1.rest-api-with-spring/build.gradle
@@ -39,9 +39,9 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
 
 //    testImplementation 'com.h2database:h2'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
-    testImplementation 'junit:junit:4.13.1'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
