TEST: fail on unknown properties(400 Bad Request)

--- a/java/1.rest-api-with-spring/src/main/resources/application.properties
+++ b/java/1.rest-api-with-spring/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=rest-api-with-spring
+
+# ObjectMapper 커스터마이징
+spring.jackson.deserialization.fail-on-unknown-properties=true
