TEST: Apply Spring REST Docs - https://docs.spring.io/spring-restdocs/docs/current/reference/htmlsingle - https://github.com/spring-projects/spring-restdocs/tree/2.0.x/samples/rest-notes-spring-data-rest

--- a/java/1.rest-api-with-spring/build.gradle
+++ b/java/1.rest-api-with-spring/build.gradle
@@ -59,4 +59,5 @@ tasks.named('test') {
 tasks.named('asciidoctor') {
     inputs.dir snippetsDir
     dependsOn test
+    outputs.dir file("build/docs/asciidoc")
 }
