--- a/java/1.rest-api-with-spring/src/main/resources/application.properties
+++ b/java/1.rest-api-with-spring/src/main/resources/application.properties
@@ -2,3 +2,17 @@ spring.application.name=rest-api-with-spring
 
 # ObjectMapper 커스터마이징
 spring.jackson.deserialization.fail-on-unknown-properties=true
+
+# 운영 DB 설정
+spring.datasource.username=postgres
+spring.datasource.password=pass
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA 관련 설정
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.properties.hibernate.format_sql=true
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
