--- a/java/1.rest-api-with-spring/build.gradle
+++ b/java/1.rest-api-with-spring/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    testImplementation 'org.springframework.security:spring-security-test'
 
     // asciidoc 추가
     asciidoctorExtensions 'org.springframework.restdocs:spring-restdocs-asciidoctor'
