--- a/java/1.rest-api-with-spring/build.gradle
+++ b/java/1.rest-api-with-spring/build.gradle
@@ -45,6 +45,8 @@ dependencies {
     implementation 'javax.xml.bind:jaxb-api:2.3.1'
     implementation 'com.sun.xml.bind:jaxb-impl:2.3.1'
 
+    implementation 'org.springframework.boot:spring-boot-configuration-processor'
+
     testImplementation 'com.h2database:h2'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.3'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.7.0'
